--- a/codepen.html
+++ b/codepen.html
@@ -6,20 +6,23 @@
   <link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet">
 </head>
 <body>
+  <nav id="navWrap">
   <div class="menu">
     <ul id="nav">
       <li id="nav"><a href = "index.html" id="nav">Homepage</a></li>
       <li id="nav"><a href = "contact.html" id="nav">Contact</a></li>
       <li id="nav"><a href = "table.html" id="nav">Table</a></li>
       <li id="nav"><a href = "codepen.html" id="nav">Codepen</a></li>
+    </ul>
   </div>
+  </nav>
+  <div class="penContainer">
   <h1 id="penHeader">Codepen problems!</h1>
-<div class="penContainer">
   <ol>
     <li><a href = "https://codepen.io/MaBwm/pen/LjdwLV?editors=1111">Problem 1</a></li>
     <li><a href = "https://codepen.io/MaBwm/pen/GvdKWB?editors=1010">Problem 2</a></li>
     <li><a href = "https://codepen.io/MaBwm/pen/JyvPVp?editors=1111">Problem 3</a></li>
   </ol>
-</div>
+  </div>
 </body>
 </html>
