--- a/Index.html
+++ b/Index.html
@@ -7,12 +7,12 @@
 </head>
 <body>
   <div class="menu">
-    <ul id="nav">
-      <li id="nav"><a href = "index.html" id="nav">Homepage</a></li>
-      <li id="nav"><a href = "contact.html" id="nav">Contact</a></li>
-      <li id="nav"><a href = "table.html" id="nav">Table</a></li>
-      <li id="nav"><a href = "codepen.html" id="nav">Codepen</a></li>
-  </div>
+    <ul class="nav">
+      <li class="nav"><a href = "index.html" class="nav">Homepage</a></li>
+      <li class="nav"><a href = "contact.html" class="nav">Contact</a></li>
+      <li class="nav"><a href = "table.html" class="nav">Table</a></li>
+      <li class="nav"><a href = "codepen.html" class="nav">Codepen</a></li>
+    </ul>
   <h1 id="midterm">2017 Road to Hire Midterm - Markus Beamer</h1>
   <div class="r2h">
   </div>
