--- a/contact.html
+++ b/contact.html
@@ -6,12 +6,12 @@
 </head>
 <body>
   <div class="menu">
-    <ul id="nav">
-      <li id="nav"><a href = "index.html" id="nav">Homepage</a></li>
-      <li id="nav"><a href = "contact.html" id="nav">Contact</a></li>
-      <li id="nav"><a href = "table.html" id="nav">Table</a></li>
-      <li id="nav"><a href = "codepen.html" id="nav">Codepen</a></li>
-  </div>
+    <ul class="nav">
+      <li class="nav"><a href = "index.html" class="nav">Homepage</a></li>
+      <li class="nav"><a href = "contact.html" class="nav">Contact</a></li>
+      <li class="nav"><a href = "table.html" class="nav">Table</a></li>
+      <li class="nav"><a href = "codepen.html" class="nav">Codepen</a></li>
+    </ul>
   <!-- For the validation plug into work properly i had to use the required tag, the text shows and I can style it properly but it would not work without it. If you
 comment out the javascript link (js/scripts.js) You cold see the difference in how the tag acts. -->
   <div class="formContainer">
