--- a/codepen.html
+++ b/codepen.html
@@ -1,4 +1,4 @@
-<DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
   <title>Codepen</title>
@@ -8,11 +8,11 @@
 <body>
   <nav id="navWrap">
   <div class="menu">
-    <ul id="nav">
-      <li id="nav"><a href = "index.html" id="nav">Homepage</a></li>
-      <li id="nav"><a href = "contact.html" id="nav">Contact</a></li>
-      <li id="nav"><a href = "table.html" id="nav">Table</a></li>
-      <li id="nav"><a href = "codepen.html" id="nav">Codepen</a></li>
+    <ul class="nav">
+      <li class="nav"><a href = "index.html" class="nav">Homepage</a></li>
+      <li class="nav"><a href = "contact.html" class="nav">Contact</a></li>
+      <li class="nav"><a href = "table.html" class="nav">Table</a></li>
+      <li class="nav"><a href = "codepen.html" class="nav">Codepen</a></li>
     </ul>
   </div>
   </nav>
